--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -12,17 +12,17 @@ on:
         required: true
         default: 4.14.186
       CHIP_ID:
-        description: Path the device tree should be synced to, relative to source root
+        description: "run 'getprop ro.boot.chipid' in termux to get chip_id (no root needed)"
         required: true
-        default: 0x00
+        default: 0x01
       IMEI_1:
         description: Device IMEI 1
         required: true
-        default: 0x00
+        default: 0x01
       IMEI_2:
         description: Device IMEI 2
         required: true
-        default: 0x00
+        default: 0x01
       WIFI_MAC:
         description: Device Wi-Fi MAC
         required: true
