--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -12,7 +12,7 @@ on:
         required: true
         default: 4.14.186
       CHIP_ID:
-        description: "run 'getprop ro.boot.chipid' in termux to get chip_id (no root needed)"
+        description: "run 'getprop ro.boot.chipid' in termux to get chip_id"
         required: true
         default: 0x01
       IMEI_1:
